--- a/Web/Web.csproj
+++ b/Web/Web.csproj
@@ -28,4 +28,12 @@
         <PackageReference Include="Microsoft.VisualStudio.Web.CodeGeneration.Design" Version="2.2.3" />
     </ItemGroup>
 
+    <ItemGroup>
+      <_ContentIncludedByDefault Remove="Views\Brand\Create.cshtml" />
+      <_ContentIncludedByDefault Remove="Views\Brand\Delete.cshtml" />
+      <_ContentIncludedByDefault Remove="Views\Brand\Details.cshtml" />
+      <_ContentIncludedByDefault Remove="Views\Brand\Edit.cshtml" />
+      <_ContentIncludedByDefault Remove="Views\Brand\Index.cshtml" />
+    </ItemGroup>
+
 </Project>
